配置を変更

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -4,18 +4,25 @@
     <canvas id="expenseByWeekBarChart"></canvas>
 </div>
 
+<div class="dashboard-component" id="weekPie">
+    <canvas id="expenseByWeekPieChart"></canvas>
+</div>
+
 <div class="dashboard-component" id="monthBar">
     <canvas id="expenseByMonthBarChart"></canvas>
+</div>
+
+<div class="dashboard-component" id="monthPie">
+    <canvas id="expenseByMonthPieChart"></canvas>
 </div>
 
 <div class="dashboard-component" id="yearBar">
     <canvas id="expenseByYearBarChart"></canvas>
 </div>
 
-
-<canvas id="expenseByWeekPieChart"></canvas>
-<canvas id="expenseByMonthPieChart"></canvas>
-<canvas id="expenseByYearPieChart"></canvas>
+<div class="dashboard-component" id="yearPie">
+    <canvas id="expenseByYearPieChart"></canvas>
+</div>
 <script>
 
 weekPrices = [];
