--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,27 +1,33 @@
 <h1>ダッシュボード</h1>
 
-<div class="dashboard-component" id="weekBar">
-    <canvas id="expenseByWeekBarChart"></canvas>
+<div class="dashboard-group">
+    <div class="dashboard-component" id="weekBar">
+        <canvas id="expenseByWeekBarChart"></canvas>
+    </div>
+
+    <div class="dashboard-component" id="weekPie">
+        <canvas id="expenseByWeekPieChart"></canvas>
+    </div>
 </div>
 
-<div class="dashboard-component" id="weekPie">
-    <canvas id="expenseByWeekPieChart"></canvas>
+<div class="dashboard-group">
+    <div class="dashboard-component" id="monthBar">
+        <canvas id="expenseByMonthBarChart"></canvas>
+    </div>
+
+    <div class="dashboard-component" id="monthPie">
+        <canvas id="expenseByMonthPieChart"></canvas>
+    </div>
 </div>
 
-<div class="dashboard-component" id="monthBar">
-    <canvas id="expenseByMonthBarChart"></canvas>
-</div>
+<div class="dashboard-group">
+    <div class="dashboard-component" id="yearBar">
+        <canvas id="expenseByYearBarChart"></canvas>
+    </div>
 
-<div class="dashboard-component" id="monthPie">
-    <canvas id="expenseByMonthPieChart"></canvas>
-</div>
-
-<div class="dashboard-component" id="yearBar">
-    <canvas id="expenseByYearBarChart"></canvas>
-</div>
-
-<div class="dashboard-component" id="yearPie">
-    <canvas id="expenseByYearPieChart"></canvas>
+    <div class="dashboard-component" id="yearPie">
+        <canvas id="expenseByYearPieChart"></canvas>
+    </div>
 </div>
 <script>
 
